--- a/invoise-web/invoise-web/src/main/resources/templates/invoice-home.html
+++ b/invoise-web/invoise-web/src/main/resources/templates/invoice-home.html
@@ -43,7 +43,9 @@
                 <th>Name</th>
             </tr>
             <tr th:each="invoice: ${invoices}">
-                <td th:text="${invoice.number}"></td>
+                <td>
+                    <a th:href="${invoice.number}" th:text="${invoice.number}"/>
+                </td>
                 <td th:text="${invoice.customerName}"></td>
             </tr>
         </table>
