--- a/invoise-web/invoise-web/src/main/resources/templates/invoice-home.html
+++ b/invoise-web/invoise-web/src/main/resources/templates/invoice-home.html
@@ -29,13 +29,8 @@
        <h3>Action than you can use :</h3>
     </section>
     <section>
-        <button>Add invoice</button>
+       <button> <a th:href="@{/invoice/create-form}" style="color: black; text-decoration: none">Add invoice</a> </button>
     </section>
-<!--    <nav>-->
-<!--        <ul>-->
-<!--            <li><a href=""><button>Add invoice</button></a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
      <section style="margin-top: 5px;">
         <table class="table-custom">
             <tr>
