--- a/invoise-web/invoise-web/src/main/resources/templates/invoice-create-form.html
+++ b/invoise-web/invoise-web/src/main/resources/templates/invoice-create-form.html
@@ -19,6 +19,21 @@
                     <input type="text" placeholder="Order number" th:field="*{orderNumber}"/>
                     <span th:if="${#fields.hasErrors('orderNumber')}" th:errors="*{orderNumber}"></span>
                 </div>
+                <div style="margin-top: 5px;">
+                    <input type="text" placeholder="street" th:field="*{street}"/>
+                </div>
+                <div style="margin-top: 5px;">
+                    <input type="text" placeholder="Street number" th:field="*{streetNumber}"/>
+                </div>
+                <div style="margin-top: 5px;">
+                    <input type="text" placeholder="City" th:field="*{city}"/>
+                </div>
+                <div style="margin-top: 5px;">
+                    <input type="text" placeholder="Zip code" th:field="*{zipCode}"/>
+                </div>
+                <div style="margin-top: 5px;">
+                    <input type="text" placeholder="Country" th:field="*{country}"/>
+                </div>
                 <div style="margin-top: 5px;">  <input type="submit" value="Ok"/> </div>
             </div>
         </form>
